syntax = "proto3";

// Data model
message Repo {
    string client_id = 1;
    string repo_id = 2;
    string default_branch = 3;
    float partial_commit_ratio = 4;
}

message Blob {
    repeated string blocks = 4;
}

message Entry {
    string name = 1;
    string address = 2; // hash of either Object or Entry prefix if tree
    enum Type {
        TREE = 0;
        OBJECT = 1;
    }
    Type type = 3;
}

message Commit {
    string tree = 1;
    repeated string parents = 2;
    string committer = 3;
    string message = 4;
    int64 timestamp = 5;
    map<string, string> metadata = 6;
}

message Branch {
    string commit = 1;
    string commit_root = 2; // denormalization to save a round trip
    string workspace_root = 3;
}

message Tombstone {}

message Object {
     Blob blob = 1;
     map<string, string> metadata = 2;
     int64 timestamp = 3;
     int64 size = 4;
}

message WorkspaceEntry {
    string path = 1;
    oneof data {
        Tombstone tombstone = 2;
        string Address = 3; // address of object
    }
}

